fix double scrollbar issue when modals open.

--- a/openscholar/modules/frontend/admin_panel/misc/admin_panel-menu.css
+++ b/openscholar/modules/frontend/admin_panel/misc/admin_panel-menu.css
@@ -12,6 +12,9 @@ body {
     height: 100%;
     position: relative;
 }
+body.overlay {
+overflow-x: visible;
+}
 .page-cp #branding,
 .page-cp #page {
     width: 100%;
